sort.basic.lessons.sort.basic.bubble.AlgBubbleSort1.scala.error
AlgBubbleSort1:7: error: value unary_! is not a member of Unit
while(!(compteur=n-1)){
      ^